<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="temperature">Temperature\n</string>
    <string name="humidity">Humidity</string>
    <string name="temperatureContent">temperatureContent</string>
    <string name="app_name">Final Project</string>
    <string name="humidityContent">Humidity</string>

    <string name="organization_id">Organization ID:</string>
    <string name="device_id">Device ID:</string>
    <string name="auth_token">Auth Token:</string>
    <string name="hide_auth_token">Hide Auth Token</string>
    <string name="show_auth_token">Show Auth Token</string>

    <string name="hide">Hide Auth Token</string>
    <string name="show">Show Auth Token</string>
</resources>