<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/currentTime"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="30dp"
        />
    <TextView
        android:id="@+id/humidityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/currentTime"
        android:layout_marginHorizontal="50dp"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        />
    <ImageView
        android:id="@+id/temperatureImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/temperatureText"
        android:src="@drawable/temperature"
        android:layout_marginHorizontal="30dp"
        android:contentDescription="@string/temperatureContent"
        />
    <ImageView
        android:id="@+id/humidityImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/humidityText"
        android:src="@drawable/humidity"
        android:layout_marginHorizontal="30dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/humidityContent"
        />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30.0°C"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/temperatureImg"
        android:layout_marginStart="65dp"
        android:layout_marginVertical="10dp"
        />
    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="45.0%"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/humidityImg"
        android:layout_marginEnd="65dp"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/disconnected_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_disconnected"
        android:layout_below="@id/temperature"
        android:text="@string/connected"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_marginHorizontal="10dp"
        />
    <TextView
        android:id="@+id/organizationID_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organization_id"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/disconnected_btn"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:autofillHints="name"
        />
    <EditText
        android:id="@+id/organizationID_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/organizationID_text"
        android:layout_below="@id/disconnected_btn"
        android:layout_marginEnd="10dp"
        android:labelFor="@id/organizationID_editText"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/deviceID_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/device_id"
        android:textSize="20sp"
        android:layout_below="@id/organizationID_text"
        android:layout_toStartOf="@id/deviceID_editText"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        />
    <EditText
        android:id="@+id/deviceID_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/organizationID_text"
        android:layout_below="@id/organizationID_text"
        android:layout_marginEnd="10dp"
        android:labelFor="@id/deviceID_editText"
        android:inputType="text"
        android:autofillHints="name"
        />
    <TextView
        android:id="@+id/auth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/auth_token"
        android:textSize="20sp"
        android:layout_below="@id/deviceID_text"
        android:layout_toStartOf="@id/deviceID_editText"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        />
    <EditText
        android:id="@+id/auth_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/organizationID_text"
        android:layout_below="@id/deviceID_text"
        android:inputType="textPassword"
        android:layout_marginEnd="10dp"
        android:labelFor="@+id/auth_editText"
        android:autofillHints="name"
        />
    <TextView
        android:id="@+id/show_hide_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide_auth_token"
        android:layout_below="@id/auth_editText"
        android:layout_toEndOf="@id/auth_text"
        android:layout_marginEnd="10dp"
        android:textColor="@color/blue"
        android:clickable="true"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/connected_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_connected"
        android:layout_below="@id/show_hide_token"
        android:text="@string/connected"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        />
</RelativeLayout>